feat: Analytics API: Add support for Options aggregation and disaggregation [2.42-DHIS2-18368]